--- a/templates/backend/company/_editModal.html.twig
+++ b/templates/backend/company/_editModal.html.twig
@@ -27,12 +27,12 @@
                   <label for="companyAdress2">Complément d'adresse</label>
                   <input class="form-control" type="text" name="companyAdress2" id="companyAdress2">
               </div>
-              <div class="input-group">
-                <div class="form-group mr-1">
+              <div class="form-row">
+                <div class="form-group col-md-6">
                     <label for="companyPostCode">Code Postal</label>
                     <input class="form-control" type="text" name="companyPostCode" id="companyPostCode">
                 </div>
-                <div class="form-group ml-1">
+                <div class="form-group col-md-6">
                     <label for="companyCity">Ville</label>
                     <input class="form-control" type="text" name="companyCity" id="companyCity">
                 </div>
