--- a/templates/backend/file/_editModal.html.twig
+++ b/templates/backend/file/_editModal.html.twig
@@ -8,8 +8,9 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        <form id="companyEdit">
+      <form id="fileEdit">
+        <input type="hidden" name="id" id="id">
+        <div class="modal-body">
             <div class="form-group">
                 <label for="fileName">Nom du fichier</label>
                 <input class="form-control" type="text" name="fileName" id="fileName">
@@ -20,25 +21,34 @@
             </div>
             <div class="form-group">
                 <label for="fileDescription">Description</label>
-                <input class="form-control" type="text" name="fileDescription" id="fileDescription">
+                <textarea name="fileDescription" id="fileDescription" class="form-control"></textarea>
             </div>
             <div class="form-group">
                 <label for="fileCommercial">Commercial</label>
                 <input class="form-control" type="text" name="fileCommercial" id="fileCommercial">
             </div>
             <div class="form-group">
+
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
                 <label for="isActive">Document actif</label>
                 <select name="isActive" id="isActive" class="form-control">
                   <option value="true">oui</option>
                   <option value="false">non</option>
                 </select>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="deletedAt">Date de suppression</label>
+                <input type="date" class="form-control" id="deletedAt">
+              </div>
             </div>
+        </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Fermer</button>
+            <button type="submit" class="btn btn-primary">Enregistrer</button>
+          </div>
         </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Fermer</button>
-        <button type="button" class="btn btn-primary">Enregistrer</button>
-      </div>
     </div>
   </div>
 </div>
