--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -63,10 +63,10 @@
                 #}
 
                 <div class="form-group pt-2"> 
-                    <button type="submit" class="btn btn-primary btn-block"> Connexion </button> 
+                    <button type="submit" class="btn btn-success btn-block"> Connexion </button> 
                 </div> <!-- form-group// --> 
                 <p class="text-center">
-                    <a href="{{ path('app_forgotten_pasword') }}" class="btn">Mot de passe oublié?</a>
+                    <a href="{{ path('app_forgotten_pasword') }}" class="btn text-success">Mot de passe oublié?</a>
                 </p> 
             </form> 
         </article> 
