--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -67,7 +67,7 @@
                         </form>
                         <table class="table table-striped table-hover">
                             <thead>
-                                <tr>
+                                <tr class="row">
                                 <th scope="col">Nom du document</th>
                                 <th scope="col">Type</th>
                                 <th scope="col">Format</th>
@@ -76,21 +76,21 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
+                                <tr class="row">
                                     <th scope="row">Compte rendu réunion</th>
                                     <td>CR</td>
                                     <td>.pdf</td>
                                     <td>01/06/2019</td>
                                     <td>*</td>
                                 </tr>
-                                <tr>
+                                <tr class="row">
                                     <th scope="row">Facture achats</th>
                                     <td>Facture</td>
                                     <td>.pdf</td>
                                     <td>25/04/2019</td>
                                     <td>*</td>
                                 </tr>
-                                <tr>
+                                <tr class="row">
                                     <th scope="row">Plaquette publicitaire</th>
                                     <td>Publicité</td>
                                     <td>.pdf</td>
