ajouté page modification et édition pour toutes les tables

--- a/templates/backend/company/new.html.twig
+++ b/templates/backend/company/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'backend/backend_layout.html.twig' %}
 
-{% block title %}Modification d'une pharmacie{% endblock %}
+{% block title %}Ajout d'une pharmacie{% endblock %}
 
 {% block body %}
-    <h1>Modification d'une pharmacie</h1>
+    <h1>Ajout d'une pharmacie</h1>
     <div class="card p-4">
     {{ include('backend/company/_form.html.twig', {'button_label': 'Update'}) }}
     <div>
