--- a/templates/backend/company/index.html.twig
+++ b/templates/backend/company/index.html.twig
@@ -7,9 +7,9 @@
 
     <div class="card p-4">
         <div class="d-flex mb-3">
-            <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_post_create') }}"><i class="fas fa-plus-square"></i> Ajouter une pharmacie</a>
+            <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_company_create') }}"><i class="fas fa-plus-square"></i> Ajouter une pharmacie</a>
         </div>
-        <table id="companyTable" class="table table-hover table-striped w-100">
+        <table id="companyTable" class="table table-hover table-striped table-responsive w-100">
             <thead>
                 <tr>
                     <th>#</th>
@@ -30,7 +30,5 @@
     <p class="text-left">
         <a href="">retour</a>
     </p>
-
-{% include('backend/company/_editModal.html.twig') %}
 
 {% endblock %}
