--- a/templates/backend/file/new.html.twig
+++ b/templates/backend/file/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'backend/backend_layout.html.twig' %}
 
-{% block title %}Modification d'un document{% endblock %}
+{% block title %}Ajout d'un document{% endblock %}
 
 {% block body %}
-    <h1>Modification d'un document</h1>
+    <h1>Ajout d'une document</h1>
     <div class="card p-4">
         {{ include('backend/file/_form.html.twig', {'button_label': 'Update'}) }}
     </div>
