--- a/templates/backend/post/edit.html.twig
+++ b/templates/backend/post/edit.html.twig
@@ -1,12 +1,12 @@
 {% extends 'backend/backend_layout.html.twig' %}
 
-{% block title %}Edition d'un article{% endblock %}
+{% block title %}Modification d'un article{% endblock %}
 
 {% block body %}
-    <h1>Edition d'un article</h1>
-
-    {{ include('backend/post/_form.html.twig', {'button_label': 'Update'}) }}
-
+    <h1>Modification d'un article</h1>
+    <div class="card p-4">
+        {{ include('backend/post/_form.html.twig', {'button_label': 'Update'}) }}
+    </div>
     <a href="{{ path('backend_post_index') }}">Retour à la liste des articles</a>
 
     {# {{ include('backend/post/_delete_form.html.twig') }} #}
