--- a/templates/backend/user/index.html.twig
+++ b/templates/backend/user/index.html.twig
@@ -7,7 +7,7 @@
 
     <div class="card p-4">
         <div class="d-flex mb-3">
-            <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_post_create') }}"><i class="fas fa-plus-square"></i> Ajouter un utilisateur</a>
+            <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_user_create') }}"><i class="fas fa-plus-square"></i> Ajouter un utilisateur</a>
         </div>
         <table id="userTable" class="table table-hover table-striped w-100">
             <thead>
@@ -28,7 +28,5 @@
     <p class="text-left">
         <a href="">retour</a>
     </p>
-
-{% include('backend/user/_editModal.html.twig') %}
 
 {% endblock %}
