--- a/templates/backend/user/new.html.twig
+++ b/templates/backend/user/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'backend/backend_layout.html.twig' %}
 
-{% block title %}Modification d'un utilisateur{% endblock %}
+{% block title %}Ajout d'un utilisateur{% endblock %}
 
 {% block body %}
-    <h1>Modification d'un utilisateur</h1>
+    <h1>Ajout d'un utilisateur</h1>
     <div class="card p-4">
         {{ include('backend/user/_form.html.twig', {'button_label': 'Update'}) }}
     </div>
