--- a/templates/backend/company/edit.html.twig
+++ b/templates/backend/company/edit.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Modification d'une pharmacie</h1>
     <div class="card p-4">
-    {{ include('backend/company/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('backend/company/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     <div>
     <a href="{{ path('backend_company_index') }}">Retour à la liste des pharmacies</a>
 
