--- a/templates/backend/file/index.html.twig
+++ b/templates/backend/file/index.html.twig
@@ -9,7 +9,7 @@
     <div class="d-flex mb-3">
         <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_file_create') }}"><i class="fas fa-plus-square"></i> Ajouter un document</a>
     </div>
-    <table id="filesTable" class="table table-hover table-striped w-100">
+    <table id="filesTable" class="table table-hover table-striped table-responsive w-100">
         <thead>
             <tr>
                 <th>#</th>
