--- a/templates/backend/post/new.html.twig
+++ b/templates/backend/post/new.html.twig
@@ -7,5 +7,5 @@
     <div class="card p-4">
         {{ include('/backend/post/_form.html.twig') }}    
     </div>
-    <a href="{{ path('backend_post_index') }}">retour à la liste des articles</a>
+    <a class="link-green" href="{{ path('backend_post_index') }}">retour à la liste des articles</a>
 {% endblock %}
