--- a/templates/backend/company/new.html.twig
+++ b/templates/backend/company/new.html.twig
@@ -7,7 +7,7 @@
     <div class="card p-4">
     {{ include('backend/company/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     <div>
-    <a href="{{ path('backend_company_index') }}">Retour à la liste des pharmacies</a>
+    <a class="link-green" href="{{ path('backend_company_index') }}">Retour à la liste des pharmacies</a>
 
     {# {{ include('backend/company/_delete_form.html.twig') }} #}
 {% endblock %}
