--- a/templates/backend/post/edit.html.twig
+++ b/templates/backend/post/edit.html.twig
@@ -7,7 +7,7 @@
     <div class="card p-4">
         {{ include('backend/post/_form.html.twig', {'button_label': 'Update'}) }}
     </div>
-    <a href="{{ path('backend_post_index') }}">Retour à la liste des articles</a>
+    <a class="link-green" href="{{ path('backend_post_index') }}">Retour à la liste des articles</a>
 
     {# {{ include('backend/post/_delete_form.html.twig') }} #}
 {% endblock %}
