--- a/templates/backend/post/index.html.twig
+++ b/templates/backend/post/index.html.twig
@@ -9,7 +9,7 @@
     <div class="d-flex mb-3">
         <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_post_create') }}"><i class="fas fa-plus-square"></i> Ajouter un article</a>
     </div>
-    <table id="postTable" class="table table-hover table-striped table-responsive w-100">
+    <table id="postTable" class="table table-hover table-striped w-100">
         <thead>
             <tr>
                 <th>#</th>
@@ -25,7 +25,7 @@
 </div>
 
 <p class="text-left">
-    <a href="">retour</a>
+    <a class="link-green" href="">retour</a>
 </p>
 
 {% endblock %}
