--- a/templates/backend/user/edit.html.twig
+++ b/templates/backend/user/edit.html.twig
@@ -7,7 +7,7 @@
     <div class="card p-4">
         {{ include('backend/user/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     </div>
-    <a href="{{ path('backend_user_index') }}">Retour à la liste des utilisateurs</a>
+    <a class="link-green" href="{{ path('backend_user_index') }}">Retour à la liste des utilisateurs</a>
 
     {# {{ include('backend/user/_delete_form.html.twig') }} #}
 {% endblock %}
