--- a/templates/user/old-profil.html.twig
+++ b/templates/user/old-profil.html.twig
@@ -154,7 +154,7 @@
                                 </button> 
                             </div>
                         </form>
-                        <table class="table table-striped table-hover">
+                        <table class="table table-hover">
                             <thead>
                                 <tr class="row">
                                 <th scope="col">Nom du document</th>
