--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -12,7 +12,7 @@
         <div class="card text-center ynova-profil-bar">
                 <img src="https://via.placeholder.com/468x200?text=Image+de+la+pharmacie" class="img-fluid" alt="...">    
             <div class="card-body">
-                <h5 class="card-title font-weight-bold text-success">Mon profil</h5>
+                <h5 class="h2 card-title font-weight-bold text-success">Mon profil</h5>
                 <em class="card-text">Bienvenue sur votre espace personnel !</em>
             </div>
             <ul class="list-group list-group-flush text-center">
@@ -29,7 +29,7 @@
             </ul>
 
             <div class="card-body">
-                <h5 class="card-title font-weight-bold text-success mt-5">Mon commercial</h5>
+                <h5 class="h2 card-title font-weight-bold text-success mt-5">Mon commercial</h5>
                 <em class="card-text">Retrouvez les coordonnées de votre commercial.</em>
             </div>
 
@@ -53,8 +53,82 @@
         <!--Profil-->
         <!--Documents-->
         <div class="card text-center ynova-profil-doc">
-            <h5 class="card-title font-weight-bold pt-5 text-success">Mon espace documents</h5>
+            <h5 class="h2 card-title font-weight-bold pt-5 text-success">Mon espace documents</h5>
             <em class="card-text p-3">Bonjour {{ user.firstname }}, <br> ici vous pourrez transmettre, consulter et télécharger vos fichiers relatifs à vos échanges auprès de votre commercial attitré.</em>
+            <div class="card-body">
+                <h5 class="h2 card-title font-weight-bold mt-5 text-success">Transmettre un document à mon commercial</h5>
+                <form action="" class="mt-5">
+                    <div class="form-group">
+                        <label for="exampleFormControlSelect1">Choisir le type de mon document :</label>
+                        <select class="form-control" id="exampleFormControlSelect1">
+                            <option>Facture</option>
+                            <option>Compte rendu</option>
+                            <option>Publicité</option>
+                            <option>Autre</option>
+                        </select>
+                        <div class="form-group">
+                        <label for="exampleFormControlFile1" class="mt-3">
+                            <strong>Formats autorisés :</strong> pdf, doc, docx, jpg, xls, ppt, pptx
+                        </label>
+                        <input type="file" class="form-control-file text-center" id="exampleFormControlFile1">
+                        </div>   
+                        <button type="submit" class="btn btn-success mt-5 p-3">
+                            Envoyer
+                            <i class="fas fa-file-upload"></i>
+                        </button> 
+                        </div>
+                </form>
+            </div>
+            <div class="card-body">
+                <h5 class="h2 card-title font-weight-bold mt-5 text-success">Consulter mes derniers documents</h5>  
+                <table class="table table-hover">
+                    <thead class="thead-light">
+                        <tr>
+                        <th scope="col">Nom du document</th>
+                        <th scope="col">Type</th>
+                        <th scope="col">Format</th>
+                        <th scope="col">Date d'ajout</th>
+                        <th scope="col">Télécharger</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                        <th scope="row">Compte rendu réunion</th>
+                        <td>CR</td>
+                        <td>.pdf</td>
+                        <td>01/06/2019</td>
+                        <td>
+                            <a href="">
+                                <i class="fas fa-file-upload"></i>
+                            </a>
+                        </td>
+                        </tr>
+                        <tr>
+                        <th scope="row">Compte rendu réunion</th>
+                        <td>CR</td>
+                        <td>.pdf</td>
+                        <td>01/06/2019</td>
+                        <td>
+                            <a href="">
+                                <i class="fas fa-file-upload"></i>
+                            </a>
+                        </td>
+                        </tr>
+                        <tr>
+                        <th scope="row">Compte rendu réunion</th>
+                        <td>CR</td>
+                        <td>.pdf</td>
+                        <td>01/06/2019</td>
+                        <td>
+                            <a href="">
+                                <i class="fas fa-file-upload"></i>
+                            </a>
+                        </td>
+                        </tr>
+                    </tbody>
+                    </table>
+            </div>
+
         </div>
 
         <!--Documents-->
