wrap-reverse pour responsive Page Profil

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -378,7 +378,7 @@ button.form-btn:hover {
 
 .ynova-profil {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;    
     width: 100%;
     justify-content: center;
 }
