--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -34,7 +34,7 @@
                     </li>
                 {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link {{ current == 'blog'? 'active'}}" href="{{ path('blog') }}">Blog</a>
+                        <a class="nav-link {{ current == 'blog'? 'active'}}" href="{{ path('blog') }}">Actualités</a>
                     </li>
 
                     {# /vianney la différence avec is_granted('IS_AUTHENTICATED_FULLY') ?
