remplacé api-platform par fost rest bundle + jms serializer

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -53,7 +53,7 @@
 
                 <div class="form-group pt-2"> 
                     <div class="checkbox">
-                        <label><input type="checkbox" name="_remember_me" class="mr-1">Se souvenir de moi</label>
+                        <label><input type="checkbox" name="_remember_me" class="mr-1" checked>Se souvenir de moi</label>
                     </div> <!-- checkbox .// -->
                 </div>
                 {#
