--- a/templates/backend/company/new.html.twig
+++ b/templates/backend/company/new.html.twig
@@ -5,6 +5,9 @@
 {% block body %}
     <h1>Ajout d'une pharmacie</h1>
     <div class="card p-4">
+    {% if company.picture is not null %}
+        <img class="card-img-top" style="max-height: 400px" src="{{ vich_uploader_asset(company, 'pictureFile') }}" alt="{{ company.name|default('illustration de l\'article') }}" />
+    {% endif %}
     {{ include('backend/company/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     <div>
     <a class="link-green" href="{{ path('backend_company_index') }}">Retour à la liste des pharmacies</a>
