--- a/templates/backend/post/new.html.twig
+++ b/templates/backend/post/new.html.twig
@@ -5,6 +5,9 @@
 {% block body %}
     <h1>Ajouter un article</h1>
     <div class="card p-4">
+    {% if post.picture is not null %}
+        <img class="card-img-top" style="max-height: 400px" src="{{ vich_uploader_asset(post, 'pictureFile') }}" alt="{{ post.title|default('illustration de l\'article') }}" />
+    {% endif %}
         {{ include('/backend/post/_form.html.twig') }}    
     </div>
     <a class="link-green" href="{{ path('backend_post_index') }}">retour à la liste des articles</a>
