--- a/templates/home/sitemap.html.twig
+++ b/templates/home/sitemap.html.twig
@@ -6,7 +6,7 @@
         <priority>1.00</priority>
     </url>
     <url>
-        <loc>https://www.ynovagroup.com/blog</loc>
+        <loc>https://www.ynovagroup.com/actualites</loc>
         <lastmod>2019-07-01T11:46:51+00:00</lastmod>
         <priority>0.80</priority>
     </url>
@@ -26,48 +26,8 @@
         <priority>0.80</priority>
     </url>
     <url>
-        <loc>https://www.ynovagroup.com/blog?page=2</loc>
-        <lastmod>2019-07-01T11:46:51+00:00</lastmod>
-        <priority>0.64</priority>
-    </url>
-    <url>
-        <loc>https://www.ynovagroup.com/blog?page=3</loc>
-        <lastmod>2019-07-01T11:46:51+00:00</lastmod>
-        <priority>0.64</priority>
-    </url>
-    <url>
-        <loc>https://www.ynovagroup.com/blog?page=8</loc>
-        <lastmod>2019-07-01T11:46:51+00:00</lastmod>
-        <priority>0.64</priority>
-    </url>
-    <url>
         <loc>https://www.ynovagroup.com/mot-de-passe-oublie</loc>
         <lastmod>2019-07-01T11:46:51+00:00</lastmod>
         <priority>0.64</priority>
-    </url>
-    <url>
-        <loc>https://www.ynovagroup.com/blog?page=1</loc>
-        <lastmod>2019-07-01T11:46:51+00:00</lastmod>
-        <priority>0.51</priority>
-    </url>
-    <url>
-        <loc>https://www.ynovagroup.com/blog?page=4</loc>
-        <lastmod>2019-07-01T11:46:51+00:00</lastmod>
-        <priority>0.51</priority>
-    </url>
-    <url>
-        <loc>https://www.ynovagroup.com/blog?page=7</loc>
-        <lastmod>2019-07-01T11:46:51+00:00</lastmod>
-        <priority>0.51</priority>
-    </url>
-    <url>
-        <loc>https://www.ynovagroup.com/blog?page=6</loc>
-        <lastmod>2019-07-01T11:46:51+00:00</lastmod>
-        <priority>0.51</priority>
-    </url>
-    <url>
-        <loc>https://www.ynovagroup.com/blog?page=5</loc>
-        <lastmod>2019-07-01T11:46:51+00:00</lastmod>
-        <priority>0.41</priority>
     </url>
 </urlset>
