modifier erreur nom phamarcie dans page post

--- a/templates/backend/post/edit.html.twig
+++ b/templates/backend/post/edit.html.twig
@@ -9,7 +9,7 @@
         <img class="card-img-top" style="max-height: 400px" src="{{ vich_uploader_asset(post, 'pictureFile') }}" alt="{{ post.title|default('illustration de l\'article') }}" />
     {% else %}
         <div class="alert alert-info alert-dismissible fade show" role="alert">
-        Aucune image disponible pour cette pharmacie
+        Aucune image disponible pour cet article
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
