--- a/templates/backend/notification/index.html.twig
+++ b/templates/backend/notification/index.html.twig
@@ -6,7 +6,7 @@
     <div class="container-fluid">
     <h1>Documents reçus</h1>
         <div class="card p-4">
-
+            {{ include('backend/partials/_flash.html.twig') }}
             <div class="alert alert-success">
                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
                     ×</button>
