--- a/templates/backend/post/edit.html.twig
+++ b/templates/backend/post/edit.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     <h1>Modification d'un article</h1>
     <div class="card p-4">
+    {{ include('backend/partials/_flash.html.twig') }}
     {% if post.picture is not null %}
         <img class="card-img-top" style="max-height: 400px" src="{{ vich_uploader_asset(post, 'pictureFile') }}" alt="{{ post.title|default('illustration de l\'article') }}" />
     {% else %}
