--- a/templates/backend/partials/_sidebar.html.twig
+++ b/templates/backend/partials/_sidebar.html.twig
@@ -14,13 +14,6 @@
                     <span class="badge badge-pill badge-success">5</span>
                 </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link text-dark" href="#">
-                    <i class="far fa-envelope"></i>
-                    Messages reçus
-                    <span class="badge badge-pill badge-success">2</span>
-                </a>
-              </li>
             </ul>
             <h4 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
               <span>Dashboard</span>
@@ -46,12 +39,20 @@
                     Documents
                 </a>
               </li>
+              {% if is_granted('ROLE_ADMIN')%}
               <li class="nav-item">
                 <a class="nav-link text-dark" href="{{ path('post_index') }}">
                     <i class="far fa-newspaper"></i>
                     Articles
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="{{ path('theme_index') }}">
+                    <i class="fas fa-birthday-cake"></i>
+                    Thèmes
+                </a>
+              </li>
+              {% endif %}
             </ul>
           </div>
         </nav>
