--- a/templates/backend/user/edit.html.twig
+++ b/templates/backend/user/edit.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     <h1>Modification d'un utilisateur</h1>
     <div class="card p-4">
+        {{ include('backend/partials/_flash.html.twig') }}
         {{ include('backend/user/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     </div>
     <a class="link-green" href="{{ path('backend_user_index') }}">Retour à la liste des utilisateurs</a>
