--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -12,7 +12,7 @@
             <section id="hero" src="{{ asset('images/ynovagroup_hero.jpg') }}" class="jumbotron-fluid container-fluid text-center img-fluid">
                 <div class="jumbotron-fluid container-fluid text-center">
                     <h1 class="display-4 text-uppercase">Ynovagroup</h1>
-                    <p class="lead">Nous sommes un groupement de pharmaciens indépendants à votre service.</p>
+                    <p class="lead">Nous sommes LE groupement de pharmaciens indépendants</p>
                     <p class="lead">
                         <a class="btn btn-success btn-sm p-2" href="#valeurs" role="button">En savoir plus</a>
                     </p>
