Image centre Hero

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -75,7 +75,7 @@ li {
 
 /* Hero Section */
 #hero {
-    background-image: url('./../images/ynovagroup_hero.jpg');
+    background-image: url('./../images/ynovagroup_hero_2.jpg');
     background-repeat: repeat;
     background-position: center;
     /* filter: blur(8px);
