rendu affichage logo ynovagroup dans la nav dynamique

--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -5,7 +5,7 @@
         {% if theme.picture is defined %}
             <img src="{{ vich_uploader_asset(theme, 'pictureFile') }}" width="200" height="70" alt="">
         {% else %}
-            Ynovagroup
+            <img src="{{ asset('images/ynovagroup_logo.png') }}" width="200" height="70" alt="">
         {% endif %}
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
