--- a/templates/backend/file/new.html.twig
+++ b/templates/backend/file/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Ajout d'un document{% endblock %}
 
 {% block body %}
-    <h1>Ajout d'une document</h1>
+    <h1>Ajout d'un document</h1>
     <div class="card p-4">
         {{ include('backend/file/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     </div>
