--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -2,7 +2,7 @@
 <header class="header py-5">
     <nav class="navbar fixed-top navbar-expand-xl navbar-light bg-white ">
         <a class="navbar-brand" href="{{ current == 'home'? '#hero' : path('home') }}">
-            <img src="{{ asset('images/ynovagroup_logo.png') }}" width="200" height="70" alt="">
+            <img id="logo" src="{{ asset('images/ynovagroup_logo.png') }}" width="400" height="140" alt="Ynovagroup Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
