--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -44,7 +44,9 @@
                 </li>
                 <li class="list-group-item font-weight-bold text-uppercase">Contact</li>        
                 <li class="list-group-item">
+                   <a href="mailto:{{ app.user.company.commercial.email|default('-') }}">
                     {{ app.user.company.commercial.email|default('-') }}
+                   </a>
                 </li>
             </ul>
             <button type="button" class="btn btn-danger mt-5">
@@ -57,26 +59,19 @@
         <!--Profil-->
         <!--Documents-->
         <div class="card text-center ynova-profil-doc">
-            <h5 class="h2 card-title font-weight-bold pt-5 text-success">Mon espace documents</h5>
+            <h5 class="h2 card-title font-weight-bold pt-1 text-success">Mon espace documents</h5>
             <em class="card-text p-3">Bonjour {{ user.firstname }}, <br> ici vous pourrez transmettre, consulter et télécharger vos fichiers relatifs à vos échanges auprès de votre commercial attitré.</em>
             <div class="card-body">
-                <h5 class="h2 card-title font-weight-bold mt-5 text-success">Transmettre un document à mon commercial</h5>
+                <h5 class="h2 card-title font-weight-bold mt-2 text-success">Transmettre un document à mon commercial</h5>
                 <form action="" class="mt-5">
                     <div class="form-group">
-                        <label for="exampleFormControlSelect1">Choisir le type de mon document :</label>
-                        <select class="form-control" id="exampleFormControlSelect1">
-                            <option>Facture</option>
-                            <option>Compte rendu</option>
-                            <option>Publicité</option>
-                            <option>Autre</option>
-                        </select>
                         <div class="form-group">
-                        <label for="exampleFormControlFile1" class="mt-3">
-                            <strong>Formats autorisés :</strong> pdf, doc, docx, jpg, xls, ppt, pptx
+                        <label for="exampleFormControlFile1" class="">
+                            <strong>Formats autorisés :</strong> zip, pdf, doc, docx, jpg, xls, ppt, pptx
                         </label>
                         <input type="file" class="form-control-file text-center" id="exampleFormControlFile1">
                         </div>   
-                        <button type="submit" class="btn btn-success mt-5 p-3">
+                        <button type="submit" class="btn btn-success mt-4">
                             Envoyer
                             <i class="fas fa-file-upload"></i>
                         </button> 
@@ -84,12 +79,11 @@
                 </form>
             </div>
             <div class="card-body">
-                <h5 class="h2 card-title font-weight-bold mt-5 text-success">Consulter mes derniers documents</h5>  
+                <h5 class="h2 card-title font-weight-bold mt-1 text-success">Consulter mes derniers documents</h5>  
                 <table class="table table-hover">
                     <thead class="thead-light">
                         <tr>
                         <th scope="col">Nom du document</th>
-                        <th scope="col">Type</th>
                         <th scope="col">Format</th>
                         <th scope="col">Date d'ajout</th>
                         <th scope="col">Télécharger</th>
@@ -98,7 +92,6 @@
                     <tbody>
                         <tr>
                         <th scope="row">Compte rendu réunion</th>
-                        <td>CR</td>
                         <td>.pdf</td>
                         <td>01/06/2019</td>
                         <td>
@@ -109,7 +102,6 @@
                         </tr>
                         <tr>
                         <th scope="row">Compte rendu réunion</th>
-                        <td>CR</td>
                         <td>.pdf</td>
                         <td>01/06/2019</td>
                         <td>
@@ -120,7 +112,6 @@
                         </tr>
                         <tr>
                         <th scope="row">Compte rendu réunion</th>
-                        <td>CR</td>
                         <td>.pdf</td>
                         <td>01/06/2019</td>
                         <td>
@@ -132,9 +123,7 @@
                     </tbody>
                     </table>
             </div>
-
         </div>
-
         <!--Documents-->
 </section>
 <section class="container-fluid m-3 ">    
