ajouté interface crud pour gestion des flux rss

--- a/templates/backend/partials/_navbar.html.twig
+++ b/templates/backend/partials/_navbar.html.twig
@@ -51,6 +51,12 @@
                             Thèmes
                         </a>
                     </li>
+                    <li class="nav-item  text-center d-lg-none">
+                        <a class="nav-link" href="{{ path('backend_rss_index') }}">
+                            <i class="fas fa-rss"></i>                            
+                            RSS
+                        </a>
+                    </li>
                     {% endif %}
                     <!-- sidebar items end -->
 
