--- a/templates/backend/partials/_sidebar.html.twig
+++ b/templates/backend/partials/_sidebar.html.twig
@@ -67,6 +67,12 @@
                     Thèmes
                 </a>
               </li>
+              <li class="nav-item">
+                  <a class="nav-link text-dark" href="{{ path('backend_rss_index') }}">
+                      <i class="fas fa-rss"></i>                            
+                      RSS
+                  </a>
+              </li>
             </ul>
             {% endif %}
           </div>
