ajouté toggle button pour les flux rss

--- a/templates/backend/post/edit.html.twig
+++ b/templates/backend/post/edit.html.twig
@@ -16,7 +16,7 @@
         </button>
         </div>
     {% endif %}
-        {{ include('backend/post/_form.html.twig', {'button_label': 'Update'}) }}
+        {{ include('backend/post/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     </div>
     <a class="link-green" href="{{ path('backend_post_index') }}">Retour à la liste des articles</a>
 
